<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="414dp"
        android:layout_height="85dp"
        android:layout_marginTop="36dp"
        tools:srcCompat="@drawable/ic_launcher_foreground" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="407dp"
        android:layout_height="39dp"
        android:layout_marginTop="48dp"
        android:foregroundTint="#E30909"
        android:gravity="center"
        android:hint="@string/txtNombre"
        android:text="@string/titulo"
        android:textColor="#DC0A0A"
        android:textSize="25dp" />

    <EditText
        android:id="@+id/editTextnumero"
        android:layout_width="411dp"
        android:layout_height="110dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:gravity="top"
        android:hint="@string/txtIngreseNom"
        android:inputType="textPersonName"
        android:textSize="22dp" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="411dp"
        android:layout_height="110dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:gravity="top"
        android:hint="@string/txtIngreseNom"
        android:inputType="textPersonName"
        android:textSize="22dp" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >


            <Button
                android:id="@+id/button6"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="Suma"
                android:layout_marginLeft="70dp"
                />

            <Button
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Resta" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                android:id="@+id/button7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Multiplicación"
                android:layout_marginLeft="70dp"/>

            <Button
                android:id="@+id/button5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="División" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                android:id="@+id/button8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Siguiente"
                android:layout_marginLeft="70dp"
                android:layout_span="@integer/material_motion_duration_long_1"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                android:id="@+id/button9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Reset"
                android:layout_marginLeft="70dp"
                android:layout_span="@integer/material_motion_duration_long_1"/>
        </TableRow>
    </TableLayout>

</LinearLayout>